# startup_appspawn

./: BUILD.gn  CODEOWNERS  OAT.xml  README.en.md  README.md  README_zh.md  appdata-sandbox-app.json  appdata-sandbox-asan.json  appdata-sandbox-debug.json  appdata-sandbox-gpu.json  appdata-sandbox-isolated-new.json  appdata-sandbox-isolated.json  appdata-sandbox-nweb.json  appdata-sandbox-render.json  appdata-sandbox.json  appdata-sandbox64.json  appspawn.cfg  appspawn.gni  appspawn.rc  appspawn_prelink_dso_list  appspawn_preload.json  appspawn_preload_ets.json  appspawn_systemLib.json  appspawndf.cfg  asan.options  bundle.json  cjappspawn.cfg  hisysevent.yaml  hybridspawn.cfg  nativespawn.cfg  nwebspawn.cfg  ohos.build  product-sandbox.json  sandbox-config.json  startup_events.yaml  webviewspawn.cfg
etc/: BUILD.gn  ohos.startup.appspawn.para  ohos.startup.appspawn.para.dac
etc/sandbox/: appdata_sandbox_fixer.gni  appdata_sandbox_fixer.py  appdata_sandbox_fixer.pydeps
interfaces/innerkits/: BUILD.gn
interfaces/innerkits/client/: BUILD.gn  appspawn_client.c  appspawn_client.h  appspawn_msg.c  appspawn_socket.cpp  client_socket.cpp  libappspawn_client.versionscript
interfaces/innerkits/dec_util/: BUILD.gn
interfaces/innerkits/hnp/: BUILD.gn
interfaces/innerkits/include/: appspawn.h  appspawn_mount_permission.h  appspawn_msg.h  appspawn_service.h  appspawn_socket.h  client_socket.h  dec_config.h
interfaces/innerkits/permission/: appspawn_mount_permission.c  appspawn_mount_permission.h
interfaces/innerkits/src/: appspawn_mount_permission.cpp
interfaces/innerkits_new/client/: BUILD.gn  appspawn_client.c  appspawn_client.h  appspawn_msg.c  libappspawn_client.versionscript
lite/: BUILD.gn  appspawn_message.c  appspawn_message.h  appspawn_process.c  appspawn_service.c  appspawn_service.h  bundle.json  main.c
modules/ace_adapter/: BUILD.gn  ace_adapter.cpp  appspawn_checkpoint.c  command_lexer.cpp  command_lexer.h  dfx_preload.cpp
modules/asan/: BUILD.gn  asan_detector.c
modules/common/: BUILD.gn  appspawn_adapter.cpp  appspawn_adapter.h  appspawn_begetctl.c  appspawn_cgroup.c  appspawn_common.c  appspawn_custom_config.cpp  appspawn_dfx_dump.cpp  appspawn_encaps.c  appspawn_encaps.h  appspawn_env.cpp  appspawn_isolate.c  appspawn_namespace.c  appspawn_silk.c  appspawn_silk.cpp  appspawn_silk.h
modules/module_engine/: BUILD.gn
modules/module_engine/include/: appspawn_hook.h  appspawn_msg.h
modules/module_engine/stub/: libappspawn.stub.json
modules/native_adapter/: BUILD.gn  native_adapter.cpp
modules/nweb_adapter/: BUILD.gn  nwebspawn_adapter.cpp
modules/sandbox/: BUILD.gn  appspawn_mount_template.c  appspawn_permission.c  appspawn_permission.h  appspawn_sandbox.c  appspawn_sandbox.h  sandbox.gni  sandbox_adapter.cpp  sandbox_adapter.h  sandbox_cfgvar.c  sandbox_debug_mode.c  sandbox_dec.c  sandbox_dec.h  sandbox_expand.c  sandbox_load.c  sandbox_manager.c  sandbox_shared.c  sandbox_shared_mount.cpp  sandbox_shared_mount.h  sandbox_utils.cpp  sandbox_utils.h
modules/sandbox/modern/: appspawn_sandbox.c  appspawn_sandbox.h  sandbox_debug_mode.c  sandbox_load.c  sandbox_manager.c  sandbox_shared.c  sandbox_shared.h
modules/sandbox/normal/: appspawn_sandbox_manager.cpp  sandbox_common.cpp  sandbox_common.h  sandbox_core.cpp  sandbox_core.h  sandbox_def.h  sandbox_shared_mount.cpp  sandbox_shared_mount.h  sandbox_unlock_mount.cpp  sandbox_unlock_mount.h
modules/spm/: BUILD.gn  spm.c  spm.h  spm_permission.c  spm_permission.h  tlv_builder.c  tlv_builder.h
modules/sysevent/: BUILD.gn  appspawn_hisysevent.cpp  appspawn_hisysevent.h  event_reporter.cpp  hisysevent_adapter.cpp  hisysevent_adapter.h
service/hnp/: BUILD.gn  README_zh.md  api_hnp.md  errorcode-hnp.md  hnp_main.c  hnpcli_main.c
service/hnp/base/: BUILD.gn  hnp_base.h  hnp_file.c  hnp_json.c  hnp_log.c  hnp_sal.c  hnp_zip.c
service/hnp/installer/: README_zh.md  api_hnp.md  errorcode-api.md  errorcode-hnp.md
service/hnp/pack/: README_zh.md  errorcode-hnpcli.md
standard/: BUILD.gn  appspawn_appmgr.c  appspawn_fd_manager.c  appspawn_fd_manager.h  appspawn_kickdog.c  appspawn_kickdog.h  appspawn_main.c  appspawn_manager.h  appspawn_msgmgr.c  appspawn_process.c  appspawn_reclaim.cpp  appspawn_reclaim.h  appspawn_service.c  appspawn_service.h  main.c  nwebspawn_launcher.c  pid_ns_init.c
test/: BUILD.gn
test/appspawn_hap_test/: build-profile.json5  oh-package.json5
test/appspawn_hap_test/AppScope/: app.json5
test/appspawn_hap_test/entry/: build-profile.json5  oh-package.json5
test/appspawn_hap_test/hvigor/: hvigor-config.json5
test/autotest/SubStartAppspawnHnp/: sub_startup_appspawn_nativeinstall_0200.json  sub_startup_appspawn_nativeinstall_0200.py  sub_startup_appspawn_nativeinstall_0300.json  sub_startup_appspawn_nativeinstall_0300.py  sub_startup_appspawn_nativeinstall_0400.json  sub_startup_appspawn_nativeinstall_0400.py  sub_startup_appspawn_nativeinstall_0500.json  sub_startup_appspawn_nativeinstall_0500.py  sub_startup_appspawn_nativeinstall_0600.json  sub_startup_appspawn_nativeinstall_0600.py  sub_startup_appspawn_nativeinstall_0700.json  sub_startup_appspawn_nativeinstall_0700.py  sub_startup_appspawn_nativeinstall_0800.json  sub_startup_appspawn_nativeinstall_0800.py  (+76 more)
test/fuzztest/: BUILD.gn
test/mock/: app_spawn_stub.cpp  app_spawn_stub.h  app_system_stub.c  js_runtime.h  resource_manager.h
test/moduletest/: BUILD.gn  appspawn_client_test.cpp  appspawn_module_test.cpp  appspawn_mst_test.cpp  appspawn_test_client.h  appspawn_test_cmd.cpp  appspawn_test_cmder.cpp  appspawn_test_cmder.h  appspawn_test_main.cpp  test_app_info.json
test/unittest/: BUILD.gn  app_spawn_stub.cpp  app_spawn_stub.h  app_spawn_test_helper.cpp  app_spawn_test_helper.h  gencoverage.sh
util/: BUILD.gn
util/include/: appspawn_error.h  appspawn_utils.h  appspawndf_utils.h  env_utils.h  json_utils.h  param_helper.h  parcel_util.h  sandbox_utils.h
util/src/: appspawn_utils.c  appspawndf_utils.cpp  command_lexer.cpp  env_utils.cpp  json_utils.cpp  param_helper.c  sandbox_utils.cpp
(+733 files in other folders)
