# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/appspawn/appspawn.gni")
import("//base/startup/appspawn/etc/sandbox/appdata_sandbox_fixer.gni")
import("//build/ohos.gni")

if (defined(appspawn_sandbox_new) && appspawn_sandbox_new) {
  ohos_prebuilt_etc("appdata-sandbox-nweb.json") {
    source = "../appdata-sandbox-nweb.json"
    part_name = "${part_name}"
    module_install_dir = "etc/sandbox"
  }

  ohos_prebuilt_etc("appdata-sandbox.json") {
    source = "../appdata-sandbox-app.json"
    symlink_target_name = [ "appdata-sandbox.json" ]
    part_name = "${part_name}"
    module_install_dir = "etc/sandbox"
  }
} else {
  ohos_prebuilt_appdata_sandbox("appdata-sandbox.json") {
    source = "../appdata-sandbox.json"
    patterns = []
    extra_sandbox_cfgs = []
    if (target_cpu == "arm64" || target_cpu == "x86_64") {
      extra_sandbox_cfgs += [ "../appdata-sandbox64.json" ]
    }
    if (is_asan) {
      extra_sandbox_cfgs += [ "../appdata-sandbox-asan.json" ]
    }
    subsystem_name = "${subsystem_name}"
    part_name = "${part_name}"
    module_install_dir = "etc/sandbox"
  }
}

ohos_prebuilt_etc("appspawn_preload.json") {
  source = "../appspawn_preload.json"
  part_name = "${part_name}"
  module_install_dir = "etc/appspawn"
}

group("etc_files") {
  deps = [
    ":appdata-sandbox.json",
    ":appspawn_preload.json",
  ]
  if (defined(appspawn_sandbox_new) && appspawn_sandbox_new) {
    deps += [ ":appdata-sandbox-nweb.json" ]
  }
}
