# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/appspawn/appspawn.gni")
import("//base/startup/appspawn/etc/sandbox/appdata_sandbox_fixer.gni")
import("//build/ohos.gni")

if (defined(appspawn_sandbox_new) && appspawn_sandbox_new) {
  ohos_prebuilt_etc("appdata-sandbox-render.json") {
    source = "../appdata-sandbox-render.json"
    part_name = "${part_name}"
    module_install_dir = "etc/sandbox"
  }

  ohos_prebuilt_etc("appdata-sandbox-gpu.json") {
    source = "../appdata-sandbox-gpu.json"
    part_name = "${part_name}"
    module_install_dir = "etc/sandbox"
  }

  ohos_prebuilt_etc("appdata-sandbox.json") {
    source = "../appdata-sandbox-app.json"
    symlink_target_name = [ "appdata-sandbox.json" ]
    part_name = "${part_name}"
    module_install_dir = "etc/sandbox"
  }

  ohos_prebuilt_etc("appdata-sandbox-isolated-new.json") {
    source = "../appdata-sandbox-isolated-new.json"
    part_name = "${part_name}"
    module_install_dir = "etc/sandbox"
  }

  ohos_prebuilt_etc("appdata-sandbox-debug.json") {
    source = "../appdata-sandbox-debug.json"
    part_name = "${part_name}"
    module_install_dir = "etc/sandbox"
  }
} else {
  ohos_prebuilt_appdata_sandbox("appdata-sandbox.json") {
    source = "../appdata-sandbox.json"
    patterns = []
    extra_sandbox_cfgs = []
    if (target_cpu == "arm64" || target_cpu == "x86_64") {
      extra_sandbox_cfgs += [ "../appdata-sandbox64.json" ]
    }
    if (is_asan || asan_detector) {
      extra_sandbox_cfgs += [ "../appdata-sandbox-asan.json" ]
    }
    subsystem_name = "${subsystem_name}"
    part_name = "${part_name}"
    module_install_dir = "etc/sandbox"
  }

  ohos_prebuilt_appdata_sandbox("appdata-sandbox-isolated.json") {
    source = "../appdata-sandbox-isolated.json"
    patterns = []
    extra_sandbox_cfgs = []
    subsystem_name = "${subsystem_name}"
    part_name = "${part_name}"
    module_install_dir = "etc/sandbox"
  }
}

ohos_prebuilt_etc("appspawn_preload.json") {
  source = "../appspawn_preload.json"
  part_name = "${part_name}"
  module_install_dir = "etc/appspawn"
}

ohos_prebuilt_etc("appspawn_preload_ets.json") {
  source = "../appspawn_preload_ets.json"
  part_name = "${part_name}"
  module_install_dir = "etc/appspawn"
}

ohos_prebuilt_etc("appspawn_systemLib.json") {
  source = "../appspawn_systemLib.json"
  part_name = "${part_name}"
  module_install_dir = "etc/appspawn"
}

ohos_prebuilt_etc("ohos.startup.appspawn.para") {
  source = "ohos.startup.appspawn.para"
  part_name = "${part_name}"
  subsystem_name = "${subsystem_name}"
  module_install_dir = "etc/param"
}

ohos_prebuilt_etc("ohos.startup.appspawn.para.dac") {
  source = "ohos.startup.appspawn.para.dac"
  part_name = "${part_name}"
  subsystem_name = "${subsystem_name}"
  module_install_dir = "etc/param"
}

group("etc_files") {
  deps = [
    ":appdata-sandbox.json",
    ":appspawn_preload.json",
    ":appspawn_preload_ets.json",
    ":appspawn_systemLib.json",
    ":ohos.startup.appspawn.para",
    ":ohos.startup.appspawn.para.dac"
  ]
  if (defined(appspawn_sandbox_new) && appspawn_sandbox_new) {
    deps += [
      ":appdata-sandbox-debug.json",
      ":appdata-sandbox-gpu.json",
      ":appdata-sandbox-isolated-new.json",
      ":appdata-sandbox-render.json",
    ]
  } else {
    deps += [ ":appdata-sandbox-isolated.json" ]
  }
}
